stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__parse_tests__stack_depth_too_deep_case_2_list_only_parsing.snap
---
source: stackslib/src/chainstate/tests/parse_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "ee4a02c365e0cb7792e1bad6daa3d1ac7d17721634b9167df06783408782eec7",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21863,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21863,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "c37b4c1401d5553eb9ad59254826e8ffbe85165f2f4f6f27a18e350488b6fbc4",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21863,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21863,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7e057f2f0482c86c3d6e36eec2ca0341f36ae2175f403f4151a90a776dc1bec1",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21863,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21863,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "cc073a4f513e88ae5164940474bba93374feb1118488f49fd083c488666cdf49",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21863,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21863,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "742d9e95e6cb83ec7a314d708bdc44cacc1c349a486a9316e47c891181c49e9e",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21863,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21863,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "43e836aa7888ba9a9fdc157301fd613b88c779abacdb482910daea43b7dec1b2",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21863,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21863,
    ),
  )),
]
